--- a/index.html
+++ b/index.html
@@ -5,106 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Safety Briefing</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-    <style>
-      body {
-        font-family: sans-serif;
-        padding: 1rem;
-        background: #f4f4f4;
-      }
-      h2,
-      h3 {
-        margin: 20px 0 10px 0;
-      }
-      .section {
-        background: white;
-        padding: 1rem;
-        margin-bottom: 1rem;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-      .input-group {
-        margin-bottom: 0.5rem;
-      }
-      .input-group label {
-        display: block;
-        margin-bottom: 0.2rem;
-        font-weight: bold;
-      }
-      input,
-      select,
-      textarea {
-        width: calc(100% - 20px);
-        padding: 0.5rem;
-        margin-bottom: 0.5rem;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 16px;
-      }
-      textarea {
-        font-family: sans-serif;
-      }
-      select:focus,
-      input:focus,
-      textarea:focus {
-        border-color: #007bff;
-        outline: none;
-      }
-      .checkbox-group label {
-        display: block;
-        font-weight: normal;
-      }
-      button {
-        padding: 0.7rem 1.5rem;
-        background: #007bff;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      button:hover {
-        background: #0056b3;
-      }
-      .employee-section,
-      .work-details-section,
-      .additional_comments-section {
-        border: 1px solid #ccc;
-        padding: 1rem;
-        border-radius: 4px;
-        margin-bottom: 1rem;
-      }
-      .employee-section {
-        margin-bottom: 0.5rem;
-      }
-      .work-details-section {
-        margin-bottom: 1.5rem;
-      }
-      /* Remove extra space between sections */
-      .section {
-        margin-bottom: 0.5rem;
-      }
-      /* Page break for additional comments */
-      .comments-section {
-        page-break-before: always;
-      }
-      .top-margin {
-        padding: 16px;
-      }
-      p {
-        margin: 0;
-      }
-    </style>
+    <link rel="icon" href="./media/logo-rings-only-purple.png" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles/styles.css" />
+
+    <!-- js -->
+    <script src="./scripts/scripts.js" defer></script>
   </head>
   <body>
     <div id="job-safety-form">
-      <h2>Job Safety Briefing</h2>
+      <h2>Bridge Inspection Job Safety Briefing</h2>
       <div class="section employee-section">
-        <p>
+        <!-- <p>
           This form is required for all routine inspection work. Routine inspections are conducted on foot from the shoulder of the highway and
           underneath the bridge. Work vehicles should have their strobe lights activated and be positioned to alert approaching drivers of the
           inspector's presence. The required personal protective equipment (PPE) for routine inspections includes Class 3 safety apparel, work boots,
           and an INDOT-issued hardhat. Routine inspections should only be performed under weather conditions that allow for adequate visibility. Heavy
           rain and dense fog should be avoided to ensure safety. For any inspection work requiring access equipment and/or traffic control, a separate
           Job Hazard Analysis must be completed.
+        </p> -->
+        <p>
+          This form is designed to document routine bridge, culvert, and retaining wall inspections conducted by the INDOT Bridge Inspection
+          department in accordance with the INDOT Safety Manual. It applies to inspections performed on foot from the highway shoulder and underneath
+          the bridge, where no access vehicles, traffic control, or special equipment are required. The inspections are carried out using standard
+          personal protective equipment (PPE) in weather conditions that ensure adequate visibility.
+        </p>
+        <br />
+        <p>
+          The intent of this form is to streamline the safety documentation process for inspections conducted in favorable weather conditions that do
+          not require the use of special equipment or traffic management. Inspections that require access equipment or traffic control will require a
+          separate Job Hazard Analysis (JHA) to be documented prior to the inspection and attached to the associated inspection reports.
         </p>
       </div>
 
@@ -139,7 +70,7 @@
 
         <div class="input-group">
           <label for="start-time">Start Time (Hour):</label>
-          <select id="start-time" name="start-time">
+          <select class="dropdown-width-adjuster" id="start-time" name="start-time">
             <option value="">Select hour</option>
             <script>
               for (let i = 0; i < 24; i++) {
@@ -151,7 +82,7 @@
 
         <div class="input-group">
           <label for="duration">Duration (Hours):</label>
-          <select id="duration" name="duration">
+          <select class="dropdown-width-adjuster" id="duration" name="duration">
             <option value="">Select duration</option>
             <script>
               for (let i = 1; i <= 12; i++) {
@@ -163,7 +94,7 @@
 
         <div class="input-group">
           <label for="district">District:</label>
-          <select id="district" name="district">
+          <select class="dropdown-width-adjuster" id="district" name="district">
             <option value="">Select district</option>
             <option value="Crawfordsville">Crawfordsville</option>
             <option value="Fort Wayne">Fort Wayne</option>
@@ -181,7 +112,7 @@
 
         <div class="input-group">
           <label for="speed-limit">Speed Limit:</label>
-          <select id="speed-limit" name="speed-limit">
+          <select class="dropdown-width-adjuster" id="speed-limit" name="speed-limit">
             <option value="<30">&lt;30 mph</option>
             <option value="30-55">30–55 mph</option>
             <option value="55-70">55–70 mph</option>
@@ -196,120 +127,6 @@
       <textarea class="top-margin" rows="4" name="notes"></textarea>
     </div>
 
-    <button onclick="generatePDF()">Download PDF</button>
-
-    <script>
-      // Function to set default values
-      function setDefaults() {
-        const today = new Date();
-        const year = today.getFullYear();
-        const month = ("0" + (today.getMonth() + 1)).slice(-2);
-        const day = ("0" + today.getDate()).slice(-2);
-        const formattedDate = `${year}-${month}-${day}`;
-
-        document.getElementById("date").value = formattedDate;
-        document.getElementById("start-time").value = "9:00";
-        document.getElementById("speed-limit").value = "30-55";
-
-        // Restore specific values from localStorage
-        const fields = ["employee-name", "work-assignment", "safety-contact", "start-time", "district", "speed-limit"];
-        fields.forEach((fieldId) => {
-          const saved = localStorage.getItem(fieldId);
-          if (saved !== null) {
-            const element = document.getElementById(fieldId);
-            if (element) element.value = saved;
-          }
-        });
-      }
-
-      // Save form data to local storage
-      function saveToLocalStorage() {
-        const fields = ["employee-name", "work-assignment", "safety-contact", "start-time", "district", "speed-limit"];
-        fields.forEach((fieldId) => {
-          const element = document.getElementById(fieldId);
-          if (element) localStorage.setItem(fieldId, element.value);
-        });
-      }
-
-      // Save data on any input change for specified fields
-      window.onload = () => {
-        setDefaults();
-
-        const fieldsToWatch = ["employee-name", "work-assignment", "safety-contact", "start-time", "district", "speed-limit"];
-        fieldsToWatch.forEach((fieldId) => {
-          const element = document.getElementById(fieldId);
-          if (element) {
-            element.addEventListener("input", saveToLocalStorage);
-          }
-        });
-      };
-    </script>
-
-    <script>
-      function generatePDF() {
-        // Force default values
-        document.getElementById("date").value ||= new Date().toISOString().split("T")[0];
-        document.getElementById("start-time").value ||= "9:00";
-        document.getElementById("speed-limit").value ||= "30-55";
-        document.getElementById("duration").value ||= "4"; // Default value
-        document.getElementById("district").value ||= "Crawfordsville";
-
-        const form = document.getElementById("job-safety-form");
-        const clone = form.cloneNode(true);
-
-        // Loop through each input/select/textarea field
-        const fields = clone.querySelectorAll("input, select, textarea");
-        fields.forEach((field) => {
-          const div = document.createElement("div");
-          div.style.marginBottom = "0.5rem";
-          div.style.fontSize = "16px";
-
-          // Find the original field by ID and get its value
-          const originalField = document.getElementById(field.id); // Get the original field by ID
-
-          if (originalField) {
-            if (field.tagName === "SELECT") {
-              const selectedValue = originalField.value; // Use the value directly from the original field
-              const selectedOption = field.querySelector(`option[value="${selectedValue}"]`);
-              div.textContent = selectedOption ? selectedOption.textContent : ""; // Use the option text for the selected value
-            } else if (field.type === "date") {
-              const iso = originalField.value;
-              const parts = iso.split("-");
-              div.textContent = parts.length === 3 ? `${parts[1]}/${parts[2]}/${parts[0]}` : "";
-            } else {
-              div.textContent = originalField.value || ""; // For inputs and textareas, grab the value from the original field
-            }
-
-            // Replace the input/select/textarea field with its visible text
-            field.replaceWith(div);
-          } else {
-            console.error(`Original field with ID ${field.id} not found.`);
-          }
-        });
-
-        // Optional styling to increase font size
-        clone.style.fontSize = "16px";
-        clone.style.padding = "2rem";
-
-        // Generate the PDF
-        html2pdf()
-          .set({
-            margin: 0.5,
-            filename: "job-safety-briefing.pdf",
-            image: { type: "jpeg", quality: 0.98 },
-            html2canvas: { scale: 2 },
-            jsPDF: { unit: "in", format: "letter", orientation: "portrait" },
-          })
-          .from(clone)
-          .save();
-      }
-
-      document.querySelectorAll("textarea").forEach((textarea) => {
-        textarea.addEventListener("input", function () {
-          this.style.height = "auto";
-          this.style.height = this.scrollHeight + "px";
-        });
-      });
-    </script>
+    <button onclick="generatePDF()">Open PDF</button>
   </body>
 </html>
