--- a/index.html
+++ b/index.html
@@ -15,28 +15,30 @@
   </head>
   <body>
     <div id="job-safety-form">
-      <h2>Bridge Inspection Job Safety Briefing</h2>
-      <div class="section employee-section">
-        <!-- <p>
-          This form is required for all routine inspection work. Routine inspections are conducted on foot from the shoulder of the highway and
-          underneath the bridge. Work vehicles should have their strobe lights activated and be positioned to alert approaching drivers of the
-          inspector's presence. The required personal protective equipment (PPE) for routine inspections includes Class 3 safety apparel, work boots,
-          and an INDOT-issued hardhat. Routine inspections should only be performed under weather conditions that allow for adequate visibility. Heavy
-          rain and dense fog should be avoided to ensure safety. For any inspection work requiring access equipment and/or traffic control, a separate
-          Job Hazard Analysis must be completed.
-        </p> -->
-        <p>
-          This form is designed to document routine bridge, culvert, and retaining wall inspections conducted by the INDOT Bridge Inspection
-          department in accordance with the INDOT Safety Manual. It applies to inspections performed on foot from the highway shoulder and underneath
-          the bridge, where no access vehicles, traffic control, or special equipment are required. The inspections are carried out using standard
-          personal protective equipment (PPE) in weather conditions that ensure adequate visibility.
-        </p>
-        <br />
-        <p>
-          The intent of this form is to streamline the safety documentation process for inspections conducted in favorable weather conditions that do
-          not require the use of special equipment or traffic management. Inspections that require access equipment or traffic control will require a
-          separate Job Hazard Analysis (JHA) to be documented prior to the inspection and attached to the associated inspection reports.
-        </p>
+      <div class="no-break">
+        <h2>Bridge Inspection Job Safety Briefing</h2>
+        <div class="section employee-section">
+          <!-- <p>
+            This form is required for all routine inspection work. Routine inspections are conducted on foot from the shoulder of the highway and
+            underneath the bridge. Work vehicles should have their strobe lights activated and be positioned to alert approaching drivers of the
+            inspector's presence. The required personal protective equipment (PPE) for routine inspections includes Class 3 safety apparel, work boots,
+            and an INDOT-issued hardhat. Routine inspections should only be performed under weather conditions that allow for adequate visibility. Heavy
+            rain and dense fog should be avoided to ensure safety. For any inspection work requiring access equipment and/or traffic control, a separate
+            Job Hazard Analysis must be completed.
+          </p> -->
+          <p>
+            This form is designed to document routine bridge, culvert, and retaining wall inspections conducted by the INDOT Bridge Inspection
+            department in accordance with the INDOT Safety Manual. It applies to inspections performed on foot from the highway shoulder and
+            underneath the bridge, where no access vehicles, traffic control, or special equipment are required. The inspections are carried out using
+            standard personal protective equipment (PPE) in weather conditions that ensure adequate visibility.
+          </p>
+          <br />
+          <p>
+            The intent of this form is to streamline the safety documentation process for inspections conducted in favorable weather conditions that
+            do not require the use of special equipment or traffic management. Inspections that require access equipment or traffic control will
+            require a separate Job Hazard Analysis (JHA) to be documented prior to the inspection and attached to the associated inspection reports.
+          </p>
+        </div>
       </div>
 
       <div class="no-break">
@@ -119,9 +121,8 @@
       </div>
 
       <div class="no-break">
-        <div class="comments-section"></div>
         <h3>Additional Notes</h3>
-        <textarea class="top-margin" rows="4" name="notes"></textarea>
+        <div id="editable" contenteditable="true" class="fancy-input"></div>
       </div>
     </div>
 
