--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
       <div class="no-break">
         <h2>Bridge Inspection Job Safety Briefing</h2>
         <div class="section employee-section">
-          <!-- <p>
-            This form is required for all routine inspection work. Routine inspections are conducted on foot from the shoulder of the highway and
-            underneath the bridge. Work vehicles should have their strobe lights activated and be positioned to alert approaching drivers of the
-            inspector's presence. The required personal protective equipment (PPE) for routine inspections includes Class 3 safety apparel, work boots,
-            and an INDOT-issued hardhat. Routine inspections should only be performed under weather conditions that allow for adequate visibility. Heavy
-            rain and dense fog should be avoided to ensure safety. For any inspection work requiring access equipment and/or traffic control, a separate
-            Job Hazard Analysis must be completed.
-          </p> -->
           <p>
             This form is designed to document routine bridge, culvert, and retaining wall inspections conducted by the INDOT Bridge Inspection
             department in accordance with the INDOT Safety Manual. It applies to inspections performed on foot from the highway shoulder and
@@ -74,22 +66,12 @@
             <label for="start-time">Start Time (Hour):</label>
             <select class="dropdown-width-adjuster" id="start-time" name="start-time">
               <option value="">Select hour</option>
-              <script>
-                for (let i = 0; i < 24; i++) {
-                  document.write(`<option value="${i}:00">${i}:00</option>`);
-                }
-              </script>
             </select>
           </div>
           <div class="input-group">
             <label for="duration">Duration (Hours):</label>
             <select class="dropdown-width-adjuster" id="duration" name="duration">
               <option value="">Select duration</option>
-              <script>
-                for (let i = 1; i <= 12; i++) {
-                  document.write(`<option value="${i}">${i} hour(s)</option>`);
-                }
-              </script>
             </select>
           </div>
           <div class="input-group">
@@ -105,8 +87,8 @@
             </select>
           </div>
           <div class="input-group">
-            <label for="location">Route:</label>
-            <input type="text" id="location" name="location" />
+            <label for="route">Route:</label>
+            <input type="text" id="route" name="route" />
           </div>
           <div class="input-group">
             <label for="speed-limit">Speed Limit:</label>
