changed inspection options for attempted fix

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
             <label for="work-assignment">Work Assignment:</label>
             <input list="work-assignment-options" id="work-assignment" name="work-assignment" />
             <datalist id="work-assignment-options">
-              <option value="Routine Bridge Inspections"></option>
-              <option value="Large Culvert Inspections"></option>
+              <option value="">Select inspection</option>
+              <option value="Routine Bridge Inspections">Routine Bridge Inspections</option>
+              <option value="Large Culvert Inspections">Large Culvert Inspections</option>
+              <option value="General Inspections">Large Culvert Inspections</option>
+              <option value="Field Checks">Field Checks</option>
             </datalist>
           </div>
           <div class="input-group">
