--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
           </div>
           <div class="input-group">
             <label for="work-assignment">Work Assignment:</label>
-            <input list="work-assignment-options" id="work-assignment" name="work-assignment" />
-            <datalist id="work-assignment-options">
+            <select class="dropdown-width-adjuster" id="work-assignment">
               <option value="">Select inspection</option>
               <option value="Routine Bridge Inspections">Routine Bridge Inspections</option>
               <option value="Large Culvert Inspections">Large Culvert Inspections</option>
-              <option value="General Inspections">Large Culvert Inspections</option>
+              <option value="General Inspections">General Inspections</option>
               <option value="Field Checks">Field Checks</option>
-            </datalist>
+            </select>
           </div>
           <div class="input-group">
             <label for="safety-contact">Safety Contact:</label>
