fixed partly cloudy

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             <select class="dropdown-width-adjuster" id="weather" name="weather">
               <option value="">Select weather</option>
               <option value="Sunny">Sunny</option>
+              <option value="Partly Cloudy">Partly Cloudy</option>
               <option value="Cloudy">Cloudy</option>
-              <option value="Partially Cloudy">Partially Cloudy</option>
               <option value="Light Rain">Light Rain</option>
               <option value="Light Snow">Light Snow</option>
             </select>
