adjusted margin and padding

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="job-safety-form">
-      <div class="no-break">
+      <div>
         <h2>Bridge Inspection Job Safety Briefing</h2>
         <div class="section employee-section">
           <p>
