Increase font for form readability

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <br />
           <p>
             The intent of this form is to streamline the safety documentation process for inspections conducted in favorable weather conditions that
-            do not require the use of special equipment or traffic management. Inspections that require access equipment or traffic control will
-            require a separate Job Hazard Analysis (JHA) to be documented prior to the inspection and attached to the associated inspection reports.
+            do not require the use of special equipment or traffic management. Inspections requiring access equipment or traffic control will require
+            a separate Job Hazard Analysis (JHA) to be documented prior to the inspection and attached to the associated inspection reports.
           </p>
         </div>
       </div>
