removed timer for record edits button

--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
       </div>
     </div>
 
-    <button id="generate-pdf" onclick="generatePDF()">Open PDF</button>
+    <button id="generate-pdf">Open PDF</button>
   </body>
 </html>
